2006-04-08  Luis Garrido  <luisgarrido@users.sourceforge.net>
 - Autotoolification of qjadeo for Qt4. Now qjadeo takes the xjadeo binary 
 from the environment variable XJADEO or from the install path.

2006-04-08  rgareus  <robin@gareus.org>
 split xjadeo.c -> main.c remote.c - and loads of extern's :(
 xjadeo v0.3.7

2006-04-07  rgareus  <robin@gareus.org>
 fixed b0rken XV (typo in display.c)
 added smpte parser and output (via remote and OSD)
 added MTC-fps to video-fps conversion code.
 
2006-04-07  rgareus  <robin@gareus.org>
 splitted the display.c into sdl, gtk and X11 source files
 quick fixed configure.ac (qmake on debian)

2006-04-07  rgareus  <robin@gareus.org>
 fixed HAVE_GTK and HAVE_SDL #defines in display.c

2006-04-06  Luis Garrido  <luisgarrido@users.sourceforge.net>
 - Autotoolification of qjadeo for Qt3. Info taken from qjackctl and
 http://www.8ung.at/leising/autoconf/qt_qmake_autoconf_automake2.html

2006-04-06  Luis Garrido  <luisgarrido@users.sourceforge.net>
 - Implementation of the maintainer-clean target.

2006-04-06  Luis Garrido  <luisgarrido@users.sourceforge.net>
 - Reorganization of source tree.

2005-11-07  Luis Garrido  <luisgarrido@users.sourceforge.net>
Fixed avseekflags for compatibility with LIBAVFORMAT_BUILD <= 4622. Thanks to Geoff Beasley for his cooperation.

2005-11-03  Luis Garrido  <luisgarrido@users.sourceforge.net>
Edited NEWS, xjadeo.1, README

2005-11-03  rgareus  <robin@gareus.org>
 - dynamic jack name. allowing multiple instances of xjadeo

2005-10-31  rgareus  <robin@gareus.org>
 - added -o --offset time offset. in video-frames

2005-10-30  rgareus  <robin@gareus.org>
 - new build environement, that checks dep. libraries.
 - parse command line options
 - fixes to work with newer Version of libffmpeg.  
 * xjadeo v0.1.1

2005-02-02  luis 
 * xjadeo v0.1.0