@@ -1,3 +1,3 @@
 #!/bin/sh
 
-aclocal -I m4 && autoheader && autoconf && automake --gnu --add-missing --copy
+aclocal && autoheader && autoconf && automake --gnu --add-missing --copy
