@@ -1,5 +1,3 @@
-ACLOCAL_AMFLAGS = -I m4
-
 qmake   = @ac_qmake@
 qt3to4   = @ac_qt3to4@
 
@@ -13,11 +11,15 @@ sources = qjadeo.cpp \
 all:	$(name)
 
 $(name).mak:	$(name).pro
-	if test "x$(qt3to4)" != "x"; then $(qt3to4) -alwaysOverwrite $(name).pro; fi
+	if test "x$(qt3to4)" != "x"; then \
+	 mkdir -p qt3; \
+	 cp -f qjadeo.cpp cp qjadeo.h mainwindow.ui qt3; \
+	 $(qt3to4) -alwaysOverwrite $(name).pro; \
+	fi
 	$(qmake) -o $(name).mak "DEFINES += BINDIR=\\\"$(bindir)\\\"" $(name).pro
 
 $(name):	$(name).mak $(sources) $(headers)
-	make -f $(name).mak
+	$(MAKE) -f $(name).mak
 
 install:	$(name)
 	$(INSTALL) $(name) $(bindir)/
@@ -27,13 +29,17 @@ uninstall:	$(bindir)/$(name)
 
 .PHONY:	clean
 clean:	$(name).mak
-	make -f $(name).mak clean
+	$(MAKE) -f $(name).mak clean
+	if test -d qt3; then \
+	 cp -f qt3/* .; \
+	 rm -rf qt3; \
+	fi
 	rm -f $(name) $(name).mak
 	rm -rf *.cache *.log *.status
 	rm -rf .ui         
 	rm -rf .obj
 	rm -rf .moc
-	rm portinglog.txt
+	rm -f portinglog.txt
 	rm -rf .tmp
 
 distclean:	clean
